annulation des test coverage

--- a/platform_nutella/food/templates/food/base.html
+++ b/platform_nutella/food/templates/food/base.html
@@ -83,7 +83,7 @@
                             </figure>
                         </a></li>
 
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" id="disconnection" href="{% url 'accounts:disconnection_user' %}">
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'accounts:disconnection_user' %}">
                             <figure>
                                 <img class="logo_disconnection" src="{% static 'food/img/logo_disconnection.png' %}"/>
                                 <figcaption>Déconnexion</figcaption>
